--- a/sections/media-with-content.liquid
+++ b/sections/media-with-content.liquid
@@ -1,5 +1,3 @@
-
-
 {% liquid
   assign media_class_modifier = 'media-with-content--' | append: section.settings.media_width
 
@@ -12,9 +10,8 @@
   endif
 %}
 
-<div class="section-background color-{{ section.settings.color_scheme }}"></div>
 <div
-  class="section section--{{ section.settings.section_width }} disable-section-top-offset media-with-content color-{{ section.settings.color_scheme }} spacing-style {{ media_class_modifier }}"
+  class="section section--{{ section.settings.section_width }} disable-section-top-offset media-with-content spacing-style {{ media_class_modifier }}"
   data-testid="media-with-content"
   style="
     {%- render 'spacing-style', settings: section.settings %}
@@ -43,10 +40,18 @@
 >
   {% content_for 'block', type: '_media-without-appearance', id: 'media' %}
 
-  {% content_for 'block', type: '_content-without-appearance', id: 'content' %}
+  <div class="media-with-content__content-wrapper color-{{ section.settings.color_scheme }}">
+    {% content_for 'block', type: '_content-without-appearance', id: 'content' %}
+  </div>
 </div>
 
 {% stylesheet %}
+  /* Thêm phần CSS cho content wrapper */
+  .media-with-content__content-wrapper {
+    grid-area: content;
+    height: 100%;
+  }
+
   .section--page-width {
     &.media-with-content {
       grid-template-areas: 'margin-left media margin-right' 'margin-left content margin-right';
@@ -162,21 +167,18 @@
       grid-area: media;
     }
 
+    /* Sửa phần CSS cho content */
     .media-with-content__content {
-      grid-area: content;
-    }
-
-    /* Inner blocks spacing */
-    .media-with-content__content > .group-block-content {
       padding-inline: var(--page-margin);
       padding-block: calc(2 * var(--page-margin));
+      height: 100%;
 
       @media screen and (min-width: 750px) {
         padding-block: var(--page-margin);
       }
     }
 
-    &.section--page-width .media-with-content__content > .group-block-content {
+    &.section--page-width .media-with-content__content {
       padding-inline: 0;
 
       @media screen and (min-width: 750px) {
@@ -184,7 +186,7 @@
       }
     }
 
-    &.section--page-width.media-with-content--media-right .media-with-content__content > .group-block-content {
+    &.section--page-width.media-with-content--media-right .media-with-content__content {
       padding-inline-end: var(--page-margin);
       padding-inline-start: 0;
     }
@@ -196,7 +198,6 @@
     min-height: 500px;
   }
 {% endstylesheet %}
-
 {% schema %}
 {
   "name": "t:names.media_with_text",
